Fixed spacing and placement of elements in Footer Bar

--- a/Work-Personal-Project/Content/css/custom/MQs.css
+++ b/Work-Personal-Project/Content/css/custom/MQs.css
@@ -4,21 +4,43 @@
     .main-header-image {
         width: 100%;
         height: auto;
+        position: absolute;
+    }
+
+    .header-text {
+        font-size: 40px !important;
+        color: white;
+        opacity: 1;
+        margin: -10% auto auto 10%;
+        position: absolute;
+        z-index: 99;
     }
 
     .header-text {
         margin: 1em;
         color: black;
         font-size:20px;
-        display: none;
     }
 
     .soc-icons {
-        padding: 0.25em 0.5em;
+        padding: 0;
+    }
+
+    .d-flex {
+        width: 95%;
+        margin: 0 auto;
     }
 
     .footer-body {
         width: 95%;
+        margin: 0 auto;
+        height: 90px;
+    }
+
+    .copyright {
+        margin-top: 0.25em;
+        padding: 0;
+
     }
 }
 
